Mostly added MAVEN_OPTS to spark recipe